--- a/scss/blocks/_aside.scss
+++ b/scss/blocks/_aside.scss
@@ -24,6 +24,7 @@
 	.widget {
 		display: inline-block;
 		vertical-align: top;
+		width: 100%;
 		margin-right: -4px;
 
 		@media screen and ( min-width: #{ config( grid, breakpoints, md ) } ) {
