--- a/css/main.css
+++ b/css/main.css
@@ -561,6 +561,9 @@ p {
   position: relative;
   z-index: 0;
   margin-bottom: -15%; }
+  @media screen and (min-width: 768px) {
+    .hone-hero {
+      padding-bottom: 20%; } }
 
 .site-main {
   margin-top: -20%; }
@@ -762,7 +765,9 @@ p {
 
 .widget-area[role="complementary"] {
   padding-top: 3rem;
-  padding-bottom: 3rem; }
+  padding-bottom: 3rem;
+  position: relative;
+  z-index: 5; }
   .widget-area[role="complementary"] .widget {
     display: inline-block;
     vertical-align: top;
@@ -835,6 +840,19 @@ p {
   #subscribe-submit button {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0; }
+
+.wp-block-media-text__content {
+  padding-left: 0;
+  padding-right: 0; }
+
+.wp-block-media-text__media {
+  padding: 3rem; }
+  .wp-block-media-text__media img {
+    border-radius: 50%;
+    padding: 1.5rem;
+    border: 2px dashed #8953ac; }
+  .media--round .wp-block-media-text__media {
+    border-radius: 50%; }
 
 .entry-header,
 .home-hero {
