--- a/scss/blocks/_aside.scss
+++ b/scss/blocks/_aside.scss
@@ -20,6 +20,8 @@
 .widget-area[role="complementary"] {
 	padding-top: calc-rem( config( spacing, base ) * 2 );
 	padding-bottom: calc-rem( config( spacing, base ) * 2 );
+	position: relative;
+	z-index: 5;
 
 	.widget {
 		display: inline-block;
