--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -63,6 +63,10 @@
 	position: relative;
 	z-index: 0;
 	margin-bottom: -15%;
+
+	@media screen and (min-width: #{ config( grid, breakpoints, md ) } ) {
+		padding-bottom: 20%;
+	}
 }
 
 
