--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@
 @import 'blocks/main-nav';
 @import 'blocks/aside';
 @import 'blocks/subscribe';
+@import 'blocks/media';
 
 // Utilities
 @import 'utilities/images';
