Adjust home page hero styling

--- a/scss/elements/_page.scss
+++ b/scss/elements/_page.scss
@@ -86,3 +86,8 @@ p {
 .has-medium-font-size {
 	@extend %text-style--lede;
 }
+
+strong,
+b {
+	font-weight: config( typography, primary, weights, bold );
+}
