--- a/css/main.css
+++ b/css/main.css
@@ -433,6 +433,10 @@ p {
 .alignfull {
   max-width: none !important; }
 
+strong,
+b {
+  font-weight: 600; }
+
 /**
  * 	 __        ______ ____  _   _ _____ 
  *   \ \      / / ___| __ )| \ | | ____|
@@ -556,13 +560,13 @@ p {
 .home-hero .wp-block-cover__inner-container {
   color: #1f1f1f; }
 
-.hone-hero {
+.home-hero {
   margin-top: -25%;
   position: relative;
   z-index: 0;
   margin-bottom: -15%; }
   @media screen and (min-width: 768px) {
-    .hone-hero {
+    .home-hero {
       padding-bottom: 20%; } }
 
 .site-main {
