Update callout styling

--- a/css/main.css
+++ b/css/main.css
@@ -561,7 +561,6 @@ b {
   color: #1f1f1f; }
 
 .home-hero {
-  margin-top: -25%;
   position: relative;
   z-index: 0;
   margin-bottom: -15%; }
@@ -845,9 +844,9 @@ b {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0; }
 
-.wp-block-media-text__content {
-  padding-left: 0;
-  padding-right: 0; }
+.media--round .wp-block-media-text__content {
+  padding-left: 0 !important;
+  padding-right: 0 !important; }
 
 .wp-block-media-text__media {
   padding: 3rem; }
@@ -857,6 +856,10 @@ b {
     border: 2px dashed #8953ac; }
   .media--round .wp-block-media-text__media {
     border-radius: 50%; }
+
+.callout {
+  background-color: #f2efed;
+  color: #1f1f1f; }
 
 .entry-header,
 .home-hero {
