--- a/scss/blocks/_media.scss
+++ b/scss/blocks/_media.scss
@@ -1,6 +1,8 @@
 .wp-block-media-text__content {
-	padding-left: 0;
-	padding-right: 0;
+	.media--round & {
+		padding-left: 0 !important;
+		padding-right: 0 !important;
+	}
 }
 
 .wp-block-media-text__media {
