--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,7 @@
 @import 'blocks/aside';
 @import 'blocks/subscribe';
 @import 'blocks/media';
+@import 'blocks/callout';
 
 // Utilities
 @import 'utilities/images';
