--- a/scss/blocks/_callout.scss
+++ b/scss/blocks/_callout.scss
@@ -2,7 +2,7 @@
 	background-color: #f2efed;
 	color: config( colors, page, contrast );
 
-	.wp-block-cover .wp-block-cover__inner-container {
+	&.wp-block-cover .wp-block-cover__inner-container {
 		color: inherit;
 	}
 }
