--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,8 @@
 @import 'blocks/subscribe';
 @import 'blocks/media';
 @import 'blocks/callout';
+@import 'blocks/latestposts';
+@import 'blocks/papertexture';
 
 // Utilities
 @import 'utilities/images';
