--- a/scss/blocks/_papertexture.scss
+++ b/scss/blocks/_papertexture.scss
@@ -6,3 +6,14 @@
 	padding-top: calc-rem( config( spacing, base ) * 2 );
 	padding-bottom: calc-rem( config( spacing, base ) * 2 );
 }
+
+
+.hentry {
+	margin-bottom: 0;
+}
+
+
+.callout + .paper-texture {
+	margin-top: calc-rem( config( spacing, base ) * 2 );
+	padding-top: calc-rem( config( spacing, base ) * 4 );
+}
