--- a/scss/blocks/_papertexture.scss
+++ b/scss/blocks/_papertexture.scss
@@ -14,6 +14,6 @@
 
 
 .callout + .paper-texture {
-	margin-top: calc-rem( config( spacing, base ) * 2 );
-	padding-top: calc-rem( config( spacing, base ) * 4 );
+	margin-top: -( calc-rem( config( spacing, base ) * 6 ) );
+	padding-top: calc-rem( config( spacing, base ) * 8 );
 }
