--- a/scss/blocks/_papertexture.scss
+++ b/scss/blocks/_papertexture.scss
@@ -5,6 +5,10 @@
 	background-size: 100% auto;
 	padding-top: calc-rem( config( spacing, base ) * 2 );
 	padding-bottom: calc-rem( config( spacing, base ) * 2 );
+
+	.wp-block-group__inner-container {
+		@extend %container;
+	}
 }
 
 
