--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,6 +36,7 @@
 @import 'blocks/callout';
 @import 'blocks/latestposts';
 @import 'blocks/papertexture';
+@import 'blocks/sponsors';
 
 // Utilities
 @import 'utilities/images';
