--- a/scss/blocks/_papertexture.scss
+++ b/scss/blocks/_papertexture.scss
@@ -1,4 +1,5 @@
-.paper-texture {
+.paper-texture,
+.post-navigation {
 	background-color: #efeef0;
 	background-image: url('https://2020.brisbane.wordcamp.org/files/2019/12/paper-texture.jpg');
 	background-repeat: repeat-y;
