--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,6 +21,7 @@
 // Elements
 @import 'elements/page';
 @import 'elements/headings';
+@import 'elements/table';
 
 // Objects
 @import 'objects/container';
@@ -37,6 +38,7 @@
 @import 'blocks/latestposts';
 @import 'blocks/papertexture';
 @import 'blocks/sponsors';
+@import 'blocks/blog';
 
 // Utilities
 @import 'utilities/images';
