--- a/scss/blocks/_papertexture.scss
+++ b/scss/blocks/_papertexture.scss
@@ -1,5 +1,5 @@
 .paper-texture,
-.post-navigation {
+.comments-area {
 	background-color: #efeef0;
 	background-image: url('https://2020.brisbane.wordcamp.org/files/2019/12/paper-texture.jpg');
 	background-repeat: repeat-y;
