--- a/scss/blocks/_papertexture.scss
+++ b/scss/blocks/_papertexture.scss
@@ -7,6 +7,10 @@
 	padding-top: calc-rem( config( spacing, base ) * 2 );
 	padding-bottom: calc-rem( config( spacing, base ) * 2 );
 
+	@media screen and (min-width: #{ config( grid, breakpoints, xl ) } ) {
+		background-attachment: fixed;
+	}
+
 	.wp-block-group__inner-container {
 		@extend %container;
 	}
