--- a/css/main.css
+++ b/css/main.css
@@ -397,7 +397,7 @@ h3,
   font-weight: 900;
   font-size: 1.875rem; }
 
-h4,
+h4, .wordcamp-sponsors .wordcamp-sponsors__title,
 .h4, .widget-title {
   font-family: Raleway;
   font-weight: 600;
@@ -451,6 +451,19 @@ a {
  *
  *	Elements: Headings                     
  */
+h2,
+.h2 {
+  margin-bottom: 0.75rem; }
+
+h3,
+.h3 {
+  margin-bottom: 0.75rem; }
+
+h4,
+.wordcamp-sponsors .wordcamp-sponsors__title,
+.h4 {
+  margin-bottom: 0.375rem; }
+
 tr {
   border-top: 1px solid rgba(0, 0, 0, 0.1); }
 
@@ -955,15 +968,17 @@ input[type="submit"] {
       border-right: 2px solid currentColor;
       border-top: 2px solid currentColor;
       transform: rotate(45deg);
-      margin-top: -0.27rem; }
+      margin-top: -0.25rem; }
   .wordcamp-sponsors.has-grid-columns-4 {
     text-align: center; }
-    @media screen and (min-width: 540px) {
-      .wordcamp-sponsors.has-grid-columns-4 li {
-        width: 33.333%; } }
-    @media screen and (min-width: 992px) {
-      .wordcamp-sponsors.has-grid-columns-4 li {
-        width: 20%; } }
+    .wordcamp-sponsors.has-grid-columns-4 li {
+      vertical-align: middle !important; }
+      @media screen and (min-width: 540px) {
+        .wordcamp-sponsors.has-grid-columns-4 li {
+          width: 33.333%; } }
+      @media screen and (min-width: 992px) {
+        .wordcamp-sponsors.has-grid-columns-4 li {
+          width: 20%; } }
   @media screen and (min-width: 768px) {
     .wordcamp-sponsors.has-grid-columns-2 li, .wordcamp-sponsors.has-grid-columns-3 li {
       width: 50%; } }
@@ -999,6 +1014,30 @@ input[type="submit"] {
     display: block; }
   .wordcamp-sponsors .wordcamp-sponsors__content {
     font-size: 14px; }
+  .wordcamp-sponsors .wordcamp-sponsors__title {
+    margin-bottom: 0.75rem; }
+  .wordcamp-sponsors .wordcamp-sponsors__title a {
+    text-decoration: none; }
+  .wordcamp-sponsors .wordcamp-sponsors__content p:last-of-type {
+    margin-bottom: 0; }
+  .wordcamp-sponsors.has-layout-list li {
+    margin-bottom: 3rem !important; }
+  .wordcamp-sponsors.has-layout-list .wordcamp-sponsor {
+    position: relative;
+    background-color: #f0f0f1;
+    padding: 3rem;
+    box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.1); }
+    @media screen and (min-width: 992px) {
+      .wordcamp-sponsors.has-layout-list .wordcamp-sponsor {
+        padding-left: 30%; } }
+  .wordcamp-sponsors.has-layout-list .wordcamp-sponsors__featured-image {
+    margin-bottom: 1.5rem; }
+    @media screen and (min-width: 992px) {
+      .wordcamp-sponsors.has-layout-list .wordcamp-sponsors__featured-image {
+        position: absolute;
+        top: 3rem;
+        left: 3rem;
+        width: 20%; } }
 
 .entry-meta {
   position: relative;
