--- a/scss/blocks/_sponsors.scss
+++ b/scss/blocks/_sponsors.scss
@@ -40,7 +40,7 @@
 			border-right: 2px solid currentColor;
 			border-top: 2px solid currentColor;
 			transform: rotate( 45deg );
-			margin-top: -0.27rem;
+			margin-top: -0.25rem;
 		}
 	}
 
@@ -49,6 +49,7 @@
 		text-align: center;
 
 		li {
+			vertical-align: middle !important;
 
 			@media screen and ( min-width: #{ config( grid, breakpoints, sm ) } ) {
 				width: 33.333%;
@@ -123,5 +124,50 @@
 
 	.wordcamp-sponsors__content {
 		font-size: config( typography, primary, sizes, small );
+	}
+
+	.wordcamp-sponsors__title {
+		@extend %h4;
+		margin-bottom: calc-rem( config( spacing, base ) * .5 );
+	}
+
+	.wordcamp-sponsors__title a {
+		text-decoration: none;
+	}
+
+	.wordcamp-sponsors__content {
+		p:last-of-type {
+			margin-bottom: 0;
+		}
+	}
+
+	&.has-layout-list {
+
+		li {
+			margin-bottom: calc-rem( config( spacing, base ) * 2 ) !important;
+		}
+
+		.wordcamp-sponsor {
+			position: relative;
+		    background-color: config( colors, page, alt );
+		    padding: calc-rem( config( spacing, base ) * 2 );
+		    box-shadow: 0 0.1rem 0.5rem rgba( 0, 0, 0, .1 );
+
+		    @media screen and ( min-width: #{ config( grid, breakpoints, lg ) } ) {
+		    	padding-left: 30%;
+		    }
+		}
+
+		.wordcamp-sponsors__featured-image {
+			margin-bottom: calc-rem( config( spacing, base ) );
+
+			@media screen and ( min-width: #{ config( grid, breakpoints, lg ) } ) {
+		    	position: absolute;
+		    	top: calc-rem( config( spacing, base ) * 2 );
+		    	left: calc-rem( config( spacing, base ) * 2 );
+		    	width: 20%;
+		    }
+		}
+
 	}
 }
